Fix a bug on mobile devices

--- a/interface/assets/styles/components.css
+++ b/interface/assets/styles/components.css
@@ -70,7 +70,7 @@ button.component--button.component--button-primary {
     position: relative;
     width: 100%;
     height: var(--scrollbar-width);
-    opacity: var(--scrollbarbuttons-opacity);
+    opacity: var(--scrollbarbuttons-opacity) !important;
     pointer-events: var(--scrollbarbuttons-pointerevents);
 }
 
